kibana/kibana_Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-dep
  namespace: elk-stack
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana-dep
        image: docker.elastic.co/kibana/kibana:7.14.1
        resources:
          requests:
            cpu: 100m
            memory: "512Mi"
          limits:
            cpu: 1000m
            memory: "2Gi"
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
