kibana/kibana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-svc
  namespace: elk-stack
  labels:
    app: kibana
    kubernetes.io/name: "Kibana"
spec:
  type: NodePort
  ports:
  - port: 5601
    protocol: TCP
    targetPort: ui
    nodePort: 32061
  selector:
    app: kibana
