kibana/kibana_ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kibana-ingress
  namespace: elk-stack
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - web.kibana.com
  rules:
    - host: web.kibana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc
                port:
                  number: 5601
